# binanceapitrade

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  pytest.ini
config/: exchange_filters_ETHUSDC.example.json
docs/: CODEX_AUTOMATION_HANDOFF.md  GITHUB_PACKAGE_MANIFEST.md  REPRODUCIBLE_DEPLOYMENT_GUIDE.md  SERVER_CURRENT_STATE_SANITIZED.md  api_notes.md  architecture.md  fast_path_connectivity_diagnosis.md  fast_path_live_readiness_report.md  final_live_decision_checklist.md  final_live_start_gate.md  forced_original_pivot_trigger_replay_report.md  live_canary_order_control_report.md  live_readiness_gate_summary.md  live_readonly_preflight_report.md  live_strategy_capability_audit.md  long_unattended_live_upgrade_report.md  new_server_f2_migration_checker.md  operations_runbook.md  original_pivot_strategy_parity_report.md  phase3a5_binance_connectivity_diagnosis.md  phase3a5_rest_451_ws_only_fallback_report.md  phase3a_server_public_market_dry_run_report.md  phase3b_systemd_dry_run_plan.md  phase3b_ws_only_systemd_dry_run_report.md  risk_rules.md  server_deployment.md  server_f2_migration_check_report.md  server_forced_original_pivot_trigger_replay_report.md  singapore_full_bot_deploy_dry_run_report.md  testing_plan.md  trading_rules.md
reports/: binance_connectivity_diagnosis.json  deploy_bundle_fast_path.json  deploy_bundle_final_pre_live_gate.json  deploy_bundle_hedge_mode_order_control_gate.json  deploy_bundle_live_sizing_position_side_gate.json  deploy_bundle_long_unattended_live.json  deploy_bundle_original_pivot.json  (+21 more)
src/bot/: alerts.py  (+24 more)
(+92 files in other folders)
