[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ethusdc-pivot-bot"
version = "0.1.0"
description = "Dry-run first multi-symbol Binance USD-M pivot reversal trading bot."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "websockets>=12",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
]
dev = [
  "pytest>=8.2",
]

[tool.setuptools.packages.find]
where = ["src"]
